--- a/src/scss/3-basics/_base.scss
+++ b/src/scss/3-basics/_base.scss
@@ -1,5 +1,5 @@
 // view size xs
 body {
   margin: 0;
-  background-color: getColor(body-bg-1);
+  background-color: getColor(base-body-bg-1);
 }
