--- a/src/scss/4-layout/_header.scss
+++ b/src/scss/4-layout/_header.scss
@@ -42,7 +42,7 @@
 
   // ----- FLEX AREAS -------------------------
   header {
-    background-color: getColor(pb-header-bg-1);
+    background-color: getColor(header-bg-1);
     border: getSize(pb-border-1);
     padding: getSize(padding-5px);
     width: fit-content;
